src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void cv_remap_0(void* src, void* dst, void* map1, void* map2, int interpolation, int borderMode, cv::Scalar borderValue, int hint);
extern "C" __declspec(dllexport) void cv_convertMaps_0(void* map1, void* map2, void* dstmap1, void* dstmap2, int dstmap1type, bool nninterpolation);
extern "C" __declspec(dllexport) void cv_undistort_0(void* src, void* dst, void* cameraMatrix, void* distCoeffs, void* newCameraMatrix);
extern "C" __declspec(dllexport) void cv_initUndistortRectifyMap_0(void* cameraMatrix, void* distCoeffs, void* R, void* newCameraMatrix, cv::Size size, int m1type, void* map1, void* map2);
extern "C" __declspec(dllexport) void cv_initInverseRectificationMap_0(void* cameraMatrix, void* distCoeffs, void* R, void* newCameraMatrix, cv::Size size, int m1type, void* map1, void* map2);
extern "C" __declspec(dllexport) void cv_fisheye_initUndistortRectifyMap_0(void* K, void* D, void* R, void* P, cv::Size size, int m1type, void* map1, void* map2);
extern "C" __declspec(dllexport) void cv_fisheye_undistortImage_0(void* distorted, void* undistorted, void* K, void* D, void* Knew, cv::Size new_size);
extern "C" __declspec(dllexport) void cv_getRectSubPix_0(void* image, cv::Size patchSize, cv::Point2f center, void* patch, int patchType);
extern "C" __declspec(dllexport) void cv_warpPolar_0(void* src, void* dst, cv::Size dsize, cv::Point2f center, double maxRadius, int flags);
extern "C" __declspec(dllexport) void cv_integral_0(void* src, void* sum, void* sqsum, void* tilted, int sdepth, int sqdepth);
extern "C" __declspec(dllexport) void cv_integral_1(void* src, void* sum, int sdepth);
extern "C" __declspec(dllexport) void cv_integral_2(void* src, void* sum, void* sqsum, int sdepth, int sqdepth);
extern "C" __declspec(dllexport) void cv_accumulate_0(void* src, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_accumulateSquare_0(void* src, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_accumulateProduct_0(void* src1, void* src2, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_accumulateWeighted_0(void* src, void* dst, double alpha, void* mask);
extern "C" __declspec(dllexport) void* cv_phaseCorrelate_0(void* src1, void* src2, void* window, void* response);
extern "C" __declspec(dllexport) void* cv_phaseCorrelateIterative_0(void* src1, void* src2, int L2size, int maxIters);
extern "C" __declspec(dllexport) void cv_createHanningWindow_0(void* dst, cv::Size winSize, int type);
extern "C" __declspec(dllexport) double cv_threshold_0(void* src, void* dst, double thresh, double maxval, int type);
extern "C" __declspec(dllexport) double cv_thresholdWithMask_0(void* src, void* dst, void* mask, double thresh, double maxval, int type);
extern "C" __declspec(dllexport) void cv_adaptiveThreshold_0(void* src, void* dst, double maxValue, int adaptiveMethod, int thresholdType, int blockSize, double C);
extern "C" __declspec(dllexport) void cv_pyrDown_0(void* src, void* dst, cv::Size dstsize, int borderType);
extern "C" __declspec(dllexport) void cv_pyrUp_0(void* src, void* dst, cv::Size dstsize, int borderType);
extern "C" __declspec(dllexport) void cv_calcHist_0(void* images, void* channels, void* mask, void* hist, void* histSize, void* ranges, bool accumulate);
extern "C" __declspec(dllexport) void cv_calcBackProject_0(void* images, void* channels, void* hist, void* dst, void* ranges, double scale);
extern "C" __declspec(dllexport) double cv_compareHist_0(void* H1, void* H2, int method);
extern "C" __declspec(dllexport) void cv_equalizeHist_0(void* src, void* dst);
extern "C" __declspec(dllexport) void* cv_createCLAHE_0(double clipLimit, cv::Size tileGridSize);
extern "C" __declspec(dllexport) float cv_wrapperEMD_0(void* signature1, void* signature2, int distType, void* cost, void* lowerBound, void* flow);
extern "C" __declspec(dllexport) void cv_watershed_0(void* image, void* markers);
extern "C" __declspec(dllexport) void cv_pyrMeanShiftFiltering_0(void* src, void* dst, double sp, double sr, int maxLevel, cv::TermCriteria termcrit);
extern "C" __declspec(dllexport) void cv_grabCut_0(void* img, void* mask, cv::Rect rect, void* bgdModel, void* fgdModel, int iterCount, int mode);
extern "C" __declspec(dllexport) void cv_distanceTransform_0(void* src, void* dst, void* labels, int distanceType, int maskSize, int labelType);
extern "C" __declspec(dllexport) void cv_distanceTransform_1(void* src, void* dst, int distanceType, int maskSize, int dstType);
extern "C" __declspec(dllexport) int cv_floodFill_0(void* image, void* mask, cv::Point seedPoint, cv::Scalar newVal, void* rect, cv::Scalar loDiff, cv::Scalar upDiff, int flags);
extern "C" __declspec(dllexport) void cv_blendLinear_0(void* src1, void* src2, void* weights1, void* weights2, void* dst);
extern "C" __declspec(dllexport) void cv_cvtColor_0(void* src, void* dst, int code, int dstCn, int hint);
extern "C" __declspec(dllexport) void cv_cvtColorTwoPlane_0(void* src1, void* src2, void* dst, int code, int hint);
extern "C" __declspec(dllexport) void cv_demosaicing_0(void* src, void* dst, int code, int dstCn);
extern "C" __declspec(dllexport) void cv_matchTemplate_0(void* image, void* templ, void* result, int method, void* mask);
extern "C" __declspec(dllexport) int cv_connectedComponents_0(void* image, void* labels, int connectivity, int ltype, int ccltype);
extern "C" __declspec(dllexport) int cv_connectedComponents_1(void* image, void* labels, int connectivity, int ltype);
extern "C" __declspec(dllexport) int cv_connectedComponentsWithStats_0(void* image, void* labels, void* stats, void* centroids, int connectivity, int ltype, int ccltype);
extern "C" __declspec(dllexport) int cv_connectedComponentsWithStats_1(void* image, void* labels, void* stats, void* centroids, int connectivity, int ltype);
extern "C" __declspec(dllexport) void cv_findContours_0(void* image, void* contours, void* hierarchy, int mode, int method, cv::Point offset);
extern "C" __declspec(dllexport) void cv_findContoursLinkRuns_0(void* image, void* contours, void* hierarchy);
extern "C" __declspec(dllexport) void cv_findContoursLinkRuns_1(void* image, void* contours);
extern "C" __declspec(dllexport) void* cv_createGeneralizedHoughBallard_0();
extern "C" __declspec(dllexport) void* cv_createGeneralizedHoughGuil_0();
extern "C" __declspec(dllexport) void cv_applyColorMap_0(void* src, void* dst, int colormap);
extern "C" __declspec(dllexport) void cv_applyColorMap_1(void* src, void* dst, void* userColor);
extern "C" __declspec(dllexport) void cv_line_0(void* img, cv::Point pt1, cv::Point pt2, cv::Scalar color, int thickness, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_arrowedLine_0(void* img, cv::Point pt1, cv::Point pt2, cv::Scalar color, int thickness, int line_type, int shift, double tipLength);