src/OpenCV5Sharp/Generated/NativeMethods.Imgproc.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_remap_0(MatHandle src, MatHandle dst, MatHandle map1, MatHandle map2, int interpolation, int borderMode, Scalar borderValue, int hint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_convertMaps_0(MatHandle map1, MatHandle map2, MatHandle dstmap1, MatHandle dstmap2, int dstmap1type, [MarshalAs(UnmanagedType.U1)] bool nninterpolation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_undistort_0(MatHandle src, MatHandle dst, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr newCameraMatrix);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_initUndistortRectifyMap_0(MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle R, MatHandle newCameraMatrix, Size size, int m1type, MatHandle map1, MatHandle map2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_initInverseRectificationMap_0(MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle R, MatHandle newCameraMatrix, Size size, int m1type, MatHandle map1, MatHandle map2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_initUndistortRectifyMap_0(MatHandle K, MatHandle D, MatHandle R, MatHandle P, Size size, int m1type, MatHandle map1, MatHandle map2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_undistortImage_0(MatHandle distorted, MatHandle undistorted, MatHandle K, MatHandle D, IntPtr Knew, Size new_size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_getRectSubPix_0(MatHandle image, Size patchSize, Point2F center, MatHandle patch, int patchType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_warpPolar_0(MatHandle src, MatHandle dst, Size dsize, Point2F center, double maxRadius, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_integral_0(MatHandle src, MatHandle sum, MatHandle sqsum, MatHandle tilted, int sdepth, int sqdepth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_integral_1(MatHandle src, MatHandle sum, int sdepth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_integral_2(MatHandle src, MatHandle sum, MatHandle sqsum, int sdepth, int sqdepth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_accumulate_0(MatHandle src, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_accumulateSquare_0(MatHandle src, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_accumulateProduct_0(MatHandle src1, MatHandle src2, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_accumulateWeighted_0(MatHandle src, MatHandle dst, double alpha, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_phaseCorrelate_0(MatHandle src1, MatHandle src2, IntPtr window, IntPtr response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_phaseCorrelateIterative_0(MatHandle src1, MatHandle src2, int L2size, int maxIters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_createHanningWindow_0(MatHandle dst, Size winSize, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_threshold_0(MatHandle src, MatHandle dst, double thresh, double maxval, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_thresholdWithMask_0(MatHandle src, MatHandle dst, MatHandle mask, double thresh, double maxval, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_adaptiveThreshold_0(MatHandle src, MatHandle dst, double maxValue, int adaptiveMethod, int thresholdType, int blockSize, double C);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_pyrDown_0(MatHandle src, MatHandle dst, Size dstsize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_pyrUp_0(MatHandle src, MatHandle dst, Size dstsize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_calcHist_0(IntPtr images, IntPtr channels, MatHandle mask, MatHandle hist, IntPtr histSize, IntPtr ranges, [MarshalAs(UnmanagedType.U1)] bool accumulate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_calcBackProject_0(IntPtr images, IntPtr channels, MatHandle hist, MatHandle dst, IntPtr ranges, double scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_compareHist_0(MatHandle H1, MatHandle H2, int method);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_equalizeHist_0(MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createCLAHE_0(double clipLimit, Size tileGridSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float cv_wrapperEMD_0(MatHandle signature1, MatHandle signature2, int distType, IntPtr cost, IntPtr lowerBound, IntPtr flow);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_watershed_0(MatHandle image, MatHandle markers);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_pyrMeanShiftFiltering_0(MatHandle src, MatHandle dst, double sp, double sr, int maxLevel, TermCriteria termcrit);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_grabCut_0(MatHandle img, MatHandle mask, Rect rect, MatHandle bgdModel, MatHandle fgdModel, int iterCount, int mode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_distanceTransform_0(MatHandle src, MatHandle dst, MatHandle labels, int distanceType, int maskSize, int labelType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_distanceTransform_1(MatHandle src, MatHandle dst, int distanceType, int maskSize, int dstType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_floodFill_0(MatHandle image, MatHandle mask, Point seedPoint, Scalar newVal, IntPtr rect, Scalar loDiff, Scalar upDiff, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_blendLinear_0(MatHandle src1, MatHandle src2, MatHandle weights1, MatHandle weights2, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cvtColor_0(MatHandle src, MatHandle dst, int code, int dstCn, int hint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cvtColorTwoPlane_0(MatHandle src1, MatHandle src2, MatHandle dst, int code, int hint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_demosaicing_0(MatHandle src, MatHandle dst, int code, int dstCn);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_matchTemplate_0(MatHandle image, MatHandle templ, MatHandle result, int method, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_connectedComponents_0(MatHandle image, MatHandle labels, int connectivity, int ltype, int ccltype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_connectedComponents_1(MatHandle image, MatHandle labels, int connectivity, int ltype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_connectedComponentsWithStats_0(MatHandle image, MatHandle labels, MatHandle stats, MatHandle centroids, int connectivity, int ltype, int ccltype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_connectedComponentsWithStats_1(MatHandle image, MatHandle labels, MatHandle stats, MatHandle centroids, int connectivity, int ltype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_findContours_0(MatHandle image, IntPtr contours, MatHandle hierarchy, int mode, int method, Point offset);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_findContoursLinkRuns_0(MatHandle image, IntPtr contours, MatHandle hierarchy);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_findContoursLinkRuns_1(MatHandle image, IntPtr contours);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createGeneralizedHoughBallard_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createGeneralizedHoughGuil_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_applyColorMap_0(MatHandle src, MatHandle dst, int colormap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_applyColorMap_1(MatHandle src, MatHandle dst, MatHandle userColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_line_0(MatHandle img, Point pt1, Point pt2, Scalar color, int thickness, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_arrowedLine_0(MatHandle img, Point pt1, Point pt2, Scalar color, int thickness, int line_type, int shift, double tipLength);
